--- a/main/_modules/gsplat/strategy/default.html
+++ b/main/_modules/gsplat/strategy/default.html
@@ -397,6 +397,7 @@
     <span class="n">prune_scale3d</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">0.1</span>
     <span class="n">prune_scale2d</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">0.15</span>
     <span class="n">refine_scale2d_stop_iter</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span>
+    <span class="c1">#refine_start_iter: int = 200</span>
     <span class="n">refine_start_iter</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">500</span>
     <span class="n">refine_stop_iter</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">15_000</span>
     <span class="n">reset_every</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">3000</span>
@@ -487,7 +488,7 @@
         <span class="k">if</span> <span class="n">step</span> <span class="o">&gt;=</span> <span class="bp">self</span><span class="o">.</span><span class="n">refine_stop_iter</span><span class="p">:</span>
             <span class="k">return</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">_update_state</span><span class="p">(</span><span class="n">params</span><span class="p">,</span> <span class="n">state</span><span class="p">,</span> <span class="n">info</span><span class="p">,</span> <span class="n">packed</span><span class="o">=</span><span class="n">packed</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_update_state</span><span class="p">(</span><span class="n">params</span><span class="p">,</span> <span class="n">state</span><span class="p">,</span> <span class="n">info</span><span class="p">,</span> <span class="n">step</span><span class="p">,</span> <span class="n">packed</span><span class="o">=</span><span class="n">packed</span><span class="p">)</span>
 
         <span class="k">if</span> <span class="p">(</span>
             <span class="n">step</span> <span class="o">&gt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">refine_start_iter</span>
@@ -531,6 +532,7 @@
         <span class="n">params</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">torch</span><span class="o">.</span><span class="n">nn</span><span class="o">.</span><span class="n">Parameter</span><span class="p">],</span> <span class="n">torch</span><span class="o">.</span><span class="n">nn</span><span class="o">.</span><span class="n">ParameterDict</span><span class="p">],</span>
         <span class="n">state</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
         <span class="n">info</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
+        <span class="n">step</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span>
         <span class="n">packed</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
     <span class="p">):</span>
         <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="p">[</span>
@@ -573,7 +575,20 @@
             <span class="n">gs_ids</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">where</span><span class="p">(</span><span class="n">sel</span><span class="p">)[</span><span class="mi">1</span><span class="p">]</span>  <span class="c1"># [nnz]</span>
             <span class="n">grads</span> <span class="o">=</span> <span class="n">grads</span><span class="p">[</span><span class="n">sel</span><span class="p">]</span>  <span class="c1"># [nnz, 2]</span>
             <span class="n">radii</span> <span class="o">=</span> <span class="n">info</span><span class="p">[</span><span class="s2">&quot;radii&quot;</span><span class="p">][</span><span class="n">sel</span><span class="p">]</span><span class="o">.</span><span class="n">max</span><span class="p">(</span><span class="n">dim</span><span class="o">=-</span><span class="mi">1</span><span class="p">)</span><span class="o">.</span><span class="n">values</span>  <span class="c1"># [nnz]</span>
-        <span class="n">state</span><span class="p">[</span><span class="s2">&quot;grad2d&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">index_add_</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="n">gs_ids</span><span class="p">,</span> <span class="n">grads</span><span class="o">.</span><span class="n">norm</span><span class="p">(</span><span class="n">dim</span><span class="o">=-</span><span class="mi">1</span><span class="p">))</span>
+        <span class="c1"># if step &gt;= 100:</span>
+        <span class="c1">#     print(&quot;[DefaultStrategy] Grad shape &quot;, state[&quot;grad2d&quot;].shape)</span>
+        <span class="c1">#     print(&quot;[DefaultStrategy] gs_ids shape &quot;, gs_ids.shape)</span>
+        <span class="c1">#     print(&quot;[DefaultStrategy] gs_ids max &quot;, max(gs_ids))</span>
+        <span class="c1">#     missing_ids = gs_ids[gs_ids &gt;= state[&quot;grad2d&quot;].shape[0]]</span>
+        <span class="c1">#     print(f&quot;[DefaultStrategy] Missing ids shape &quot;,  missing_ids.shape[0])</span>
+        <span class="c1">#     print(f&quot;[DefaultStrategy] Missing ids &quot;,  missing_ids)</span>
+        <span class="c1">#     valid_ids = gs_ids[gs_ids &lt; state[&quot;grad2d&quot;].shape[0]]</span>
+        <span class="c1">#     print(f&quot;[DefaultStrategy] Valid ids shape &quot;,  valid_ids.shape[0])</span>
+        <span class="c1">#     print(f&quot;[DefaultStrategy] Valid ids max &quot;,  max(valid_ids))</span>
+        <span class="n">valid_mask</span> <span class="o">=</span> <span class="n">gs_ids</span> <span class="o">&lt;</span> <span class="n">state</span><span class="p">[</span><span class="s2">&quot;grad2d&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
+        <span class="n">gs_ids</span> <span class="o">=</span> <span class="n">gs_ids</span><span class="p">[</span><span class="n">valid_mask</span><span class="p">]</span>
+        <span class="c1">#grads = grads[valid_mask]</span>
+        <span class="n">state</span><span class="p">[</span><span class="s2">&quot;grad2d&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">index_add_</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="n">gs_ids</span><span class="p">,</span> <span class="n">grads</span><span class="p">[</span><span class="n">valid_mask</span><span class="p">]</span><span class="o">.</span><span class="n">norm</span><span class="p">(</span><span class="n">dim</span><span class="o">=-</span><span class="mi">1</span><span class="p">))</span>
         <span class="n">state</span><span class="p">[</span><span class="s2">&quot;count&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">index_add_</span><span class="p">(</span>
             <span class="mi">0</span><span class="p">,</span> <span class="n">gs_ids</span><span class="p">,</span> <span class="n">torch</span><span class="o">.</span><span class="n">ones_like</span><span class="p">(</span><span class="n">gs_ids</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">torch</span><span class="o">.</span><span class="n">float32</span><span class="p">)</span>
         <span class="p">)</span>
