--- a/main/_modules/gsplat/strategy/default.html
+++ b/main/_modules/gsplat/strategy/default.html
@@ -399,7 +399,8 @@
     <span class="n">refine_scale2d_stop_iter</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span>
     <span class="c1">#refine_start_iter: int = 200</span>
     <span class="n">refine_start_iter</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">500</span>
-    <span class="n">refine_stop_iter</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">15_000</span>
+    <span class="c1">#refine_stop_iter: int = 15_000</span>
+    <span class="n">refine_stop_iter</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">30000</span>
     <span class="n">reset_every</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">3000</span>
     <span class="n">refine_every</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">100</span>
     <span class="n">pause_refine_after_reset</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span>
